
----------------------------------------------------------------------
--- 2022-XX-XX  Release 7.34.X                                     ---
----------------------------------------------------------------------

* improved mged & archer html command help formatting - Sean Morrison
* fixed archer empty string ("") loading behavior - Cliff Yapp
* gqa -Ae exposed air report no longer has gapped air - Sean Morrison
* fixed rt framebuffer bug with -g/-G cellsize options - Sean Morrison
* added new idents(5) file format manual page - Sean Morrison
* preserved path prefixes on search cmd results - Cliff Yapp
* new 'material' command and material object infrastructure
        - Dinges, Connelly, Olivarez, McGregor, Studwell, Wilson


----------------------------------------------------------------------
--- 2022-05-08  Release 7.32.6                                     ---
----------------------------------------------------------------------

* reduced mged & archer max image size and memory use - Sean Morrison
* fixed librt handling of object names with '/' chars - Cliff Yapp
* changed fast4-g to not make references to empty regions - Cliff Yapp
* fixed gcv option handling - Cliff Yapp
* updated bundled Eigen dependency to v3.4.0 - Cliff Yapp
* fixed bot_merge crash when bots are of different types - Cliff Yapp
* fixed nirt -L to not require database and objects - Sean Morrison
* fixed bug reading older VOL objects with file data - Sean Morrison
* fixed pixscale bug when scaling images down - Sean Morrison


----------------------------------------------------------------------
--- 2021-07-27  Release 7.32.4                                     ---
----------------------------------------------------------------------

* Added -matrix search filter for finding comb matrices - Cliff Yapp
* fixed MGED handling of long running subprocesses in script mode
        - Cliff Yapp, Sean Morrison
* improve documentation for bot modes in bot and search - Cliff Yapp