@@ -456,12 +456,10 @@
       <varlistentry>
 	<term><option>-P #</option></term>
 	<listitem>
-	  <para>specifies the maximum number of processors (in a multi-processor system) to be
-	  used for this execution.  The default is system dependent.
-	  On "dedicated" multi-processors, such as workstations and super-minis,
-	  the default is usually set for the maximum number of processors,
-	  while on shared multi-processors, such as SuperComputers,
-	  usually just one processor is used by default.</para>
+          <para>Specify the maximum number of processor cores to be
+          used on multicore systems.  The default is the maximum
+          number of cores available for the machine.  Negative numbers
+          indicate using all except for the count specified.</para>
 	</listitem>
       </varlistentry>
 
